<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/storySettingsButton"
        android:layout_width="188dp"
        android:layout_height="62dp"
        android:layout_marginTop="28dp"
        android:onClick="goToSettings"
        android:text="@string/settings_button_eng"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storyStartButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/informationButton"
        android:layout_width="188dp"
        android:layout_height="62dp"
        android:layout_marginTop="28dp"
        android:onClick="goToInfo"
        android:text="@string/info_button_eng"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userStatsButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/userStatsButton"
        android:layout_width="188dp"
        android:layout_height="62dp"
        android:layout_marginTop="28dp"
        android:onClick="goToStats"
        android:text="@string/stats_button_eng"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storySettingsButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/storyStartButton"
        android:layout_width="188dp"
        android:layout_height="62dp"
        android:onClick="goToStory"
        android:text="@string/story_button_eng"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="307dp"
        android:layout_height="41dp"
        android:text="@string/welcome_message_gr"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="178dp"
        android:layout_height="165dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244"
        app:srcCompat="@mipmap/moon_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>